samples/_failures_safe/1761170704_db39c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d8e2e9bc.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_d8e2e9bc.c:176:5: error: expected expression at end of input
  176 |     if (
      |     ^~
./samples/SAFE/__tmp_d8e2e9bc.c:176:5: error: expected declaration or statement at end of input
